@@ -80,7 +80,7 @@ class PlgSearchCategories extends JPlugin
 			$state[] = 2;
 		}
 
-		if (!empty($state))
+		if (empty($state))
 		{
 			return array();
 		}
