@@ -76,7 +76,7 @@ class PlgSearchNewsfeeds extends JPlugin
 			$state[] = 2;
 		}
 
-		if (!empty($state))
+		if (empty($state))
 		{
 			return array();
 		}
@@ -156,7 +156,7 @@ class PlgSearchNewsfeeds extends JPlugin
 			->select('\'1\' AS browsernav')
 			->from('#__newsfeeds AS a')
 			->join('INNER', '#__categories as c ON c.id = a.catid')
-			->where('(' . $where . ')AND a.published IN (' . implode(',', $state) . ') AND c.published = 1 AND c.access IN (' . $groups . ')')
+			->where('(' . $where . ') AND a.published IN (' . implode(',', $state) . ') AND c.published = 1 AND c.access IN (' . $groups . ')')
 			->order($order);
 
 		// Filter by language
